--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -47,7 +47,7 @@
         "\n",
         "\n",
         "<p align=\"center\">\n",
-        "<img width=60% src=\"https://raw.githubusercontent.com/gabrielcapela/Churn-Prediction/main/images/three-friends-job.jpg\">\n",
+        "<img width=60% src=\"https://github.com/gabrielcapela/Churn-Prediction/blob/7cbdd39f3c7ab5a6da5f7dc2d4ca75df6212935e/images/three-friends-job.jpg">\n",
         "</p>\n",
         "\n",
         "\n",
